Disable deprecation warnings in MSVC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 PROJECT(lemon)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
+IF(MSVC)
+	ADD_DEFINITIONS(-D _CRT_SECURE_NO_WARNINGS)
+ENDIF()
+
 ADD_EXECUTABLE(lemon lemon.c)
