Add LEMON_TARGET macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,23 @@ PROJECT(lemon)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 ADD_EXECUTABLE(lemon lemon.c)
+
+MACRO(LEMON_TARGET Name Input Template)
+	GET_FILENAME_COMPONENT(LEMON_INPUT_FILENAME ${Input} NAME_WE)
+	GET_FILENAME_COMPONENT(LEMON_TEMPLATE_EXTENSION ${Template} EXT)
+	GET_FILENAME_COMPONENT(LEMON_TEMPLATE_PATH ${Template} PATH)
+
+	IF(LEMON_TEMPLATE_PATH STREQUAL "")
+		SET(LEMON_TEMPLATE_PATH ${lemon_SOURCE_DIR}/${Template})
+	ELSE()
+		SET(LEMON_TEMPLATE_PATH ${Template})
+	ENDIF()
+
+	SET(LEMON_${Name}_OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/${LEMON_INPUT_FILENAME}${LEMON_TEMPLATE_EXTENSION})
+
+	ADD_CUSTOM_COMMAND(
+		OUTPUT ${LEMON_${Name}_OUTPUTS}
+		COMMAND lemon ARGS ${Input} -P${CMAKE_CURRENT_BINARY_DIR}/ -T${LEMON_TEMPLATE_PATH}
+		DEPENDS ${Input} ${LEMON_TEMPLATE_PATH}
+		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+ENDMACRO()
