Add generated header file to outputs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ MACRO(LEMON_TARGET Name Input Template)
 		SET(LEMON_TEMPLATE_PATH ${Template})
 	ENDIF()
 
-	SET(LEMON_${Name}_OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/${LEMON_INPUT_FILENAME}${LEMON_TEMPLATE_EXTENSION})
+	SET(LEMON_${Name}_OUTPUTS
+		${CMAKE_CURRENT_BINARY_DIR}/${LEMON_INPUT_FILENAME}.h
+		${CMAKE_CURRENT_BINARY_DIR}/${LEMON_INPUT_FILENAME}${LEMON_TEMPLATE_EXTENSION})
 
 	ADD_CUSTOM_COMMAND(
 		OUTPUT ${LEMON_${Name}_OUTPUTS}
